# fastapi

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  logger.ini  pyproject.toml  start_service.sh
app/: db_init.py  main.py  migration_manager.sh
app/alembic/: env.py
app/alembic/versions/: 95caa450fc2c_initial_migration.py  d25381d86760_add_email_verification_fields_to_user.py
app/controllers/api/: auth_controller.py  user_controller.py
app/controllers/pages/: page_controller.py
app/core/: config.py  dependencies.py
app/core/middlewares/: cors_middleware.py  security_middleware.py  static_middleware.py
app/core/security/: bcrypt_hashing.py  session.py  sha256_hashing.py
app/exceptions/: handler.py  scheme.py
app/mappers/: user_mapper.py
app/models/: db.py  dto.py  enums.py
app/repos/: user_repo.py
app/service/: user_service.py
app/templates/: auth.jinja  main.jinja
app/utils/: email.py
app/views/: common_view.py  main_view.py
